# flux

./: .gitignore  README.md  package.json
agent/: agent.py  gmail_service.py  main.py  pyproject.toml
agent/api/: __init__.py
agent/api/auth/: callback.py  google_login.py  status.py
agent/api/emails/: get_email.py  list.py  search.py  send_email.py  stream.py
agent/tests/: test_gmail_service.py
agent/tests/api/auth/: test_callback.py  test_google_login.py  test_status.py
agent/tests/api/emails/: test_get_email.py  test_list.py  test_search.py  test_send_email.py  test_stream.py
agent/tools/: list_inbox.py  list_sent.py  read_email.py  reply_email.py  search_emails.py  send_email.py
src/app/: constants.ts  globals.css  layout.tsx  page.tsx  providers.tsx
src/app/(email)/: layout.tsx
src/app/(email)/compose/: page.tsx
src/app/(email)/email/[id]/: page.tsx
src/app/(email)/inbox/: page.tsx
src/app/(email)/inbox/[id]/: page.tsx
src/app/(email)/sent/: page.tsx
src/app/(email)/sent/[id]/: page.tsx
src/app/api/: auth.ts  axios.ts  emails.ts
src/app/api/copilotkit/: route.ts
src/components/: AuthGate.tsx  ComposeEmail.tsx  EmailDetail.tsx  EmailFilterBar.tsx  EmailList.tsx  Sidebar.tsx
src/hooks/: useAgentSync.ts  useAgentTools.ts  useEmailFilters.ts  useEmailStream.ts
src/hooks/tanstack/: useAuthApi.ts  useEmailsApi.ts
src/lib/: gmail-query.ts  types.ts
src/store/: composeStore.ts
src/utils/: queryClient.ts
