[project]
name = "ai-mail-agent"
version = "0.1.0"
description = "ADK Gmail Agent with AI assistance"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic",
    "google-adk",
    "google-genai",
    "ag-ui-adk",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
